# Basic_Orchestrator_Agent_Personality

./: .gitignore  .pre-commit-config.yaml  Dockerfile.mem0  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  README_LOGGING.md  README_TOOLS.md  TESTING_SUMMARY.md  TODO.md  __init__.py  config.yaml  debug_output.txt  docker-compose.mem0.yml  docker-compose.yml  env_backup.txt  integrate_tools.py  mem0.config.json  mem0_supabase_setup.sql  models.py  mypy.ini  null  orchestrator_working_notes.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_mem0_docker.py  run_template_agent_cli.py  run_tool_tests.py  setup.py  setup_dev.py  test_import.py  test_mem0_api.py  test_mem0_local.py  test_mem0_supabase.py  test_rag_integration.py  test_tool_discovery.py
.cursor/: mcp.json
config/: logging_config.py
docs/: Mem0package.json  database_architecture.md  versions.md
faiss_index/: memories.faiss  memories.pkl
memory_db/: chroma.sqlite3
src/: __init__.py  main copy.py  main.py  run_cli.py  run_personal_assistant.py
test_output/: test_tool_1_result.txt
tests/: README.md  __init__.py  conftest.py  pytest.ini  simple_logging_test.py  test_agents.py  test_ai_agent.py  test_archon_coder.py  test_base_agent.py  test_base_interface.py  test_base_tool.py  test_cli.py  test_cli_display.py  test_cli_interface.py  test_config.py  test_datetime_utils.py  test_db_manager.py  test_db_manager_refactored.py  test_dynamic_tool_loading.py  test_embedding_utils.py  test_graph_state.py  test_import.py  test_initialize_tools.py  test_io_adapter.py  (+25 more)
(+439 files in other folders)
