[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic_orchestrator_agent"
version = "0.1.0"
description = "Basic Orchestrator Agent Personality"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py"
] 